--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,15 @@ mpmath==1.3.0
 networkx==3.5
 numpy==2.3.1
 packaging==25.0
+pandas==2.3.0
 pillow==11.2.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytz==2025.2
 setuptools==80.9.0
 six==1.17.0
 sympy==1.14.0
 torch==2.7.1
 torchvision==0.22.1
 typing_extensions==4.14.0
+tzdata==2025.2
